# copypost

./: .gitignore  Bluesky Bot in Rust.md  Cargo.toml
src/: main.rs
