[dependencies]
atrium-api = "0.25.4"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"

[package]
name = "copypost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copypost"
path = "src/main.rs"
