[dependencies]
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros" ] } 
atrium-api = "0.25.4" 
atrium-xrpc-client = "0.5.14"
serde_json = "1.0.141"

[package]
name = "copypost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copypost"
path = "src/main.rs"
